# videos

./: .gitignore  README.md  pyproject.toml  reademe.md
.github/workflows/: generate.yml
src/: __init__.py  config.py  main.py  models.py
src/services/: cta_manager.py  elevenlabs_service.py  gemini_service.py  pexels_service.py  subtitle_service.py
src/utils/: cache.py  logging.py  retry.py
src/video/: composer.py
